--- a/01-rules/01-fix-this-html.html
+++ b/01-rules/01-fix-this-html.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 
 <html lang="en">
-       
     <head>
-         <title>My first HTML page</title>
+         <title>
+               My first HTML page
+         </title>
     </head>     
           <body>
                <h1 id="heading">My first site</h1>
-               <img alt src="under-construction.gif">
-               <p>I'm sorry, but this page is<b> &nbsp;&nbsp;</b>still<b>&nbsp;&nbsp;</b> under construction.</p>
-               <p>I love</p> <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">learning html</a>
+               <img alt src="Under-construction.gif">
+               <p>
+                    I'm sorry, but this page is
+                    <b>&nbsp;&nbsp;</b>still
+                    <b>&nbsp;&nbsp;</b> under construction.
+               </p>
+               <p>
+                    I love
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                        learning HTML
+                    </a>
+               </p>
           </body>        
 </html>
