--- a/02-tables/02-tables.html
+++ b/02-tables/02-tables.html
@@ -2,11 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>02: Tables</title>
+        <Title>Tables</Title>
     </head>
     <body>
         <table>
-            
+            <tr>
+              <th>Item</th>
+              <th>Cost per Item</th>       
+              <th>Quality</th>
+              <th>Price</th>
+            </tr>      
+            <tr>
+              <td><b> Bananas<b/></td>
+              <td>50 Ar</td>
+              <td>5</td>
+              <td>250 Ar</td>
+            </tr>
+            <tr>
+                <td><b>Mangoes</b></td>
+                <td>60 Ar</td>                
+                <td>3</td>
+                <td>180 Ar</td>
+            </tr>
+            <tr>
+                <td><b>Plums</b></td>
+                <td>10 Ar</td>
+                <td>10</td>
+                <td>100 Ar</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><b>Total</b></td>
+                <td></td>
+                <td><b>530 Ar</b></td>
+            </tr>        
         </table>
     </body>
 </html>
