Refixed  02-tables/02-tables.html

--- a/02-tables/02-tables.html
+++ b/02-tables/02-tables.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"> 
-        <Title>02:Tables</Title>
+        <Title>02: Tables</Title>
     </head> 
     <body>
-        <table summary="03 types of fruit, totalling 530 Ar.">
+        <table hidden>
+            <caption>
+                3 types 0f fruit, totalling 530 Ar.
+            </caption>    
         <thead>
             <tr>
               <th scope="col" id="header-item">Item</th>
