Refixed 01-rules/01-fix-this-html.html

--- a/01-rules/01-fix-this-html.html
+++ b/01-rules/01-fix-this-html.html
@@ -10,9 +10,7 @@
                <h1 id="heading">My first site</h1>
                <img alt src="Under-construction.gif">
                <p>
-                    I'm sorry, but this page is
-                    <b>&nbsp;&nbsp;</b>still
-                    <b>&nbsp;&nbsp;</b> under construction.
+                    I'm sorry, but this page is <b>still</b> under construction.
                </p>
                <p>
                     I love
