Added  03-nested-lists/03-nested-lists.html

--- a/02-tables/02-tables.html
+++ b/02-tables/02-tables.html
@@ -7,7 +7,7 @@
     <body>
         <table hidden>
             <caption>
-                3 types 0f fruit, totalling 530 Ar.
+                3 types of fruit, totalling 530 Ar.
             </caption>    
         <thead>
             <tr>
