--- a/01-rules/01-fix-this-html.html
+++ b/01-rules/01-fix-this-html.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1 id="heading">My first site</h1>
-  <img alt src="Under-construction.gif">
+  <img alt src="Under_construction.gif">
   <p>
     I'm sorry, but this page is <b>still</b> under construction.
   </p>
