--- a/03-nested-lists/lists.html
+++ b/03-nested-lists/lists.html
@@ -23,13 +23,13 @@
   </header>
   <nav>
     <ol>
-      <li><a href="section-unordered">Ordered list</a></li>
-      <li><a href="section-unordered">Unordered list</a></li>
-      <li><a href="section-nav">Unordered list with a nav</a></li>
+      <li><a href="section_unordered">Ordered list</a></li>
+      <li><a href="section_unordered">Unordered list</a></li>
+      <li><a href="section_nav">Unordered list with a nav</a></li>
     </ol>
   </nav>
   <main>
-    <section id="section-ordered">
+    <section id="section_ordered">
       <header>
         <h2>Ordered list</h2>
       </header>
@@ -42,7 +42,7 @@
         </li>
       </ol>
     </section>
-    <section id="section-unordered">
+    <section id="section_unordered">
       <header>
         <h2>
           Unordered list
@@ -53,7 +53,7 @@
         <li>Item</li>
       </ol>
     </section>
-    <section id="section-nav">
+    <section id="section_nav">
       <header>
         <h2>
           Unordered list inside a <code>nav</code>
