--- a/02-tables/02-tables.html
+++ b/02-tables/02-tables.html
@@ -13,34 +13,34 @@
     </caption>
     <thead>
       <tr>
-        <th scope="col" id="header-item">Item</th>
-        <th scope="col" id="header-cost">Cost per Item</th>
-        <th scope="col" id="header-qty">Quantity</th>
-        <th scope="col" id="header-price">Price</th>
+        <th scope="col" id="header_item">Item</th>
+        <th scope="col" id="header_cost">Cost per Item</th>
+        <th scope="col" id="header_qty">Quantity</th>
+        <th scope="col" id="header_price">Price</th>
       </tr>
     </thead>
     <tr>
-      <th headers="header-item" scope="row" id="row-bananas">Bananas</th>
-      <td headers="row-bananas header-cost">50 Ar</td>
-      <td headers="row-bananas header-qty">5</td>
-      <td headers="row-bananas header-price">250 Ar</td>
+      <th headers="header_item" scope="row" id="row_bananas">Bananas</th>
+      <td headers="row_bananas header_cost">50 Ar</td>
+      <td headers="row_bananas header_qty">5</td>
+      <td headers="row_bananas header_price">250 Ar</td>
     </tr>
     <tr>
-      <th headers=header-item scope="row" id="row-mangoes">Mangoes</th>
-      <td headers="row-mangoes header-cost">60 Ar</td>
-      <td headers="row-mangoes header-qty">3</td>
-      <td headers="row-mangoes header-price">180 Ar</td>
+      <th headers=header_item scope="row" id="row_mangoes">Mangoes</th>
+      <td headers="row_mangoes header_cost">60 Ar</td>
+      <td headers="row_mangoes header_qty">3</td>
+      <td headers="row_mangoes header_price">180 Ar</td>
     </tr>
     <tr>
-      <th headers=header-item scope="row" id="row-plums">Plums</th>
-      <td headers="row-plums header-cost">10 Ar</td>
-      <td headers="row-plums header-qty">10</td>
-      <td headers="row-plums header-price">100 Ar</td>
+      <th headers=header_item scope="row" id="row_plums">Plums</th>
+      <td headers="row_plums header_cost">10 Ar</td>
+      <td headers="row_plums header_qty">10</td>
+      <td headers="row_plums header_price">100 Ar</td>
     </tr>
     <tfoot>
       <tr>
-        <th scope="row" colspan="3" id="row-total">Total</th>
-        <th headers="row-total header-price">530 Ar</th>
+        <th scope="row" colspan="3" id="row_total">Total</th>
+        <th headers="row_total header_price">530 Ar</th>
       </tr>
     </tfoot>
   </table>
