--- a/05-all-elements/05-all-elements.html
+++ b/05-all-elements/05-all-elements.html
@@ -32,22 +32,391 @@
         </dt>
         <dd>
           <p>
-
+            The abbreviation element (<code>&lt;abbr&gt;</code>) is one of the fundamental elements in HTML.
           </p>
+          <p>
+            It allows a user to use an abbreviation(s) or acronym(s) in a text.
+          </p>
+
         </dd>
 
         <!-- Add the next element here as a <dt> & <dd> pair -->
-        <!--
         <dt>
-
+          <code>&lt;&gt;article</code>
         </dt>
         <dd>
-
+          <p>
+            The article element (<code>&lt;article&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to reprent a section of a page which consists of a composition that forms
+             an independent part of a document, page oe site. For examples a forum post, a magazine, a user-submitted comment.
+          </p>
         </dd>
-        -->
+        <dt>
+          <code>&lt;body&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The body element (<code>&lt;body&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to represent the main content of the document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;button&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The button element (<code>&lt;button&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to show a button on a document, and if the button is disabled, then the user agent
+              should allow the user to activate the button.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;caption&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The caption element (<code>&lt;caption&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to represent the title of a table which is its parent, if it has a parent and
+             thah is a table element.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;code&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The code element (<code>&lt;code&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It represents a fragment of computer code and amaizingly, it can be an exel element name,
+             a filename and even a computer program.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;dd&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The description, definition element (<code>&lt;dd&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It stands for description, definition, or value, part of a term description group in a description list.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;dv&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The division element (<code>&lt;div&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It doesn't really have special meaning at all, but what it does is to represent it s
+            children and it can be used with the class and lang.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;dt&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The dt element (<code>&lt;dt&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to represent the term, or name,
+             part of a term-description group in a description list (dl element)..
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;DOCTYPE&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The DOCTYPE element (<code>&lt;DOCTYPE&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It is a required preamble and must consist of the following characters, like this:
 
-      </dl>
-
+            A string that is an ASCII case-insensitive match for the string "<!DOCTYPE".
+            One or more space characters.
+            A string that is an ASCII case-insensitive match for the string html.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;footer&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The anchor element (<code>&lt;footer&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It contains metadata about its enclosing section, such as who wrote it,
+             links to related documents, copyright data, etc.
+              Contact information for the section given in a footer should be marked up using the address element.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;form&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The form element (<code>&lt;form&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It gives a collection of form-associated elements,
+             some of which can represent editable values that can be submitted to a server for processing.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;h1-h6&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The h1-h6 element (<code>&lt;h1-h6&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            They stand for represanting collection of form-associated elements,
+             some of which can represent editable values that can be submitted to a server for processing.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;head&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The head element (<code>&lt;head&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It represents a collection of metadata for the Document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;header&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The header element (<code>&lt;header&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It is typically used to group a set of h1–h6 elements to mark up a page's title with its subtitle or tagline.
+             header elements may, however, contain more than just the section's headings and subheadings — e.g.,
+              version history information or publication date..
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;html&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The html element (<code>&lt;html&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            The html element represents the root of an HTML document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;iframe&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The iframe element (<code>&lt;iframe&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It is used to represent a nested browsing context.
+            For iframe elements in HTML documents, the attribute, if present,
+             must have a value using the HTML syntax that consists of the following syntactic components,
+              in the given order:
+            Any number of comments and space characters.
+            Optionally, a DOCTYPE.
+            Any number of comments and space characters.
+            The root element, in the form of an html element.
+            Any number of comments and space characters.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;a&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The anchor element (<code>&lt;a&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to click on the link text it provides, and navigates to that link's location.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;img&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The img element (<code>&lt;img&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to put an image. The image given by the src attribute is the embedded content,
+             and the value of the alt attribute is the img element's fallback content.
+            The src attribute must be present, and must contain a valid non-empty URL potentially
+             surrounded by spaces referencing a non-interactive, optionally animated,
+              image resource that is neither paged nor scripted.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;li&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The list element (<code>&lt;li&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to make a list on a document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;link&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The link element (<code>&lt;link&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows  authors to link their document to other resources and it also allows
+            reviewer to gain more informatio by clicking the link.
+            The destination of the link(s) is given by the href attribute,
+             which must be present and must contain a valid non-empty URL potentially surrounded by spaces.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;main&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The main element (<code>&lt;main&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            The main element is an exact analogue of ARIA's role="main",
+             and is designed to show screenreaders and assistive technologies exactly where main content begins,
+              so it can be a target for a "skip links" keyboard command, for example.
+            It could also be used for content syndication (Instapaper-ish things);
+                mobile browsers could zoom in on main when encountering non-responsive websites.
+            It should therefore be used once per page.
+            If you use something like <div id="main"> (or similar, such as <div id="content">),
+                     simply replace that with <main role="main">.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;meta&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The meta element (<code>&lt;meta&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            The meta element represents various kinds of metadata that cannot be expressed using the title,
+             base, link, style, and script elements.
+            The meta element can represent document-level metadata with the name attribute,
+              pragma directives with the http-equiv attribute,
+               and the file's character encoding declaration when an HTML document is serialized to string form
+                (e.g. for transmission over the network or for disk storage) with the charset attribute.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;nav&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The nav element (<code>&lt;nav&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It is used to represent navigation for a document.
+            The nav element is a section containing links to other documents or to parts within the current document.
+            Not all groups of links on a page need to be in a nav element — only groups of primary navigation links.
+            In particular, it is common for footers to have a list of links to various key parts of a site,
+             but the footer element is more appropriate in such cases.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;ol&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The ordered list element (<code>&lt;ol&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to make a list of items, where the items have been intentionally ordered,
+             such that changing the order would change the meaning of the list.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;option&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The option element (<code>&lt;option&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It  represents an option in a select element or as part of a list of suggestions in a datalist element.
+            In certain circumstances described in the definition of the select element,
+             an option element can be a select element's placeholder label option. A placeholder label option does not represent an actual option,
+              but instead represents a label for the select control.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;p&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The paragraph element (<code>&lt;p&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to write a paragraph..
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;script&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The script element (<code>&lt;script&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows authors to include dynamic script and data blocks in their documents.
+            The element does not represent content for the user..
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;section&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The section element (<code>&lt;section&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            Represents a generic document or application section. In this context, a section is a thematic grouping of content,
+             typically with a header, possibly with a footer. Examples include chapters in a book,
+              the various tabbed pages in a tabbed dialog box, or the numbered sections of a thesis.
+            A web site's home page could be split into sections for an introduction, news items, contact information.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The anchor element (<code>&lt;a&gt;</code>) is one of the fundamental elements in HTML.
+          </p>
+          <p>
+            It allows a user to click on the link text it provides, and navigates to that link's location.
+          </p>
+        </dd>
+        <dt>
+      --->
     </main>
   </body>
 </html>
