--- a/08-log-in-form/08-log-in-form.html
+++ b/08-log-in-form/08-log-in-form.html
@@ -28,20 +28,17 @@
         <p>
           <label for="username"><b>Username</b> (At least 8 characters):</label>
           <p>
-            <input type="text" id="username" placeholder="Enter your email address" name="uname" required>
+            <input type="text" id="username" name="uname" required>
           </p>
           <p>
             <label for="password"><b>Password</b> (At least 8 characters):</label>
           </p>
           <p>
-            <input type="password" id="password" placeholder="Enter Password" style="background-color: white;"
-              name="psw" required>
+            <input type="password" id="password" name="psw" required>
           </p>
           <p>
             <button type="submit">Login</button>
           </p>
-          <button type="button" class="cancelbtn">Cancel</button>
-
 
       </div>
     </form>
