--- a/09-correct-fields/09-correct-fields.html
+++ b/09-correct-fields/09-correct-fields.html
@@ -1,103 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>
-      09: Choosing the correct field
-    </title>
-    <link rel="stylesheet" href="forms.css">
-  </head>
-  <body>
-    <header>
-      <h1>
-        Choosing the correct field
-      </h1>
-      <p>Please create the right HTML form field(s) for each <code>fieldset</code> below</p>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="#form_text">Text entry</a></li>
-        <li><a href="#form_booleans">Boolean choices</a></li>
-        <li><a href="#form_single">Single choice</a></li>
-        <li><a href="#form_multiple">Multiple choices</a></li>
-        <li><a href="#form_other">Other form fields</a></li>
-      </ul>
-    </nav>
-    <main>
-      <form action="#form_text" method="GET" id="form_text">
-        <header>
-          <h2>Text entry</h2>
-        </header>
-        <fieldset>
-          <legend>Simple text: Nickname</legend>
-          <!-- The server is expecting plain text here with the `name` of `nickname`. Linebreaks aren't allowed. -->
-        </fieldset>
-        <fieldset>
-          <legend>Multi-line Text: Biography</legend>
-          <!-- The server is expecting paragraphs of text here to act as the `biography` field. Linebreaks need to be saved. -->
-        </fieldset>
-        <fieldset>
-          <legend>Mobile phone number</legend>
-          <!-- The server is expecting the user's `mobile_phone` here. -->
-        </fieldset>
-        <fieldset>
-          <legend>Website</legend>
-          <!-- The server is expecting the user's `website` address here. -->
-        </fieldset>
-        <fieldset>
-          <legend>Date of birth</legend>
-          <!-- The server is expecting the user's `date_of_birth` here. -->
-        </fieldset>
-        <fieldset>
-          <legend>Age</legend>
-          <!-- The server is expecting the user's `age` in years here. -->
-        </fieldset>
-        <div>
-          <button type="submit" name="form" value="text">Send</button>
-        </div>
-      </form>
 
-      <form action="#form_booleans" method="GET" id="form_booleans">
-        <header>
-          <h2>Boolean / Binary choices</h2>
-        </header>
-        <fieldset>
-          <legend>True / False, with a default choice</legend>
-          <!-- The server is expecting a choice between `true` and `false` only. Set it to `true` by default. -->
-        </fieldset>
-        <fieldset>
-          <legend>Confirm</legend>
-          <!-- The server is expecting a specific name/value pair of `confirm=true` that the user can confirm, or nothing in its place. -->
-          <input type="checkbox" name="confirm" value="true">
-        </fieldset>
-        <fieldset>
-          <legend>Yes or No</legend>
-          <!-- The server is expecting a value of `yes`, or `no` for the `agree` field. -->
-        </fieldset>
-        <div>
-          <button type="submit" name="form" value="booleans">Send</button>
-        </div>
-      </form>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <title>
+    09: Choosing the correct field
+  </title>
+  <link rel="stylesheet" href="forms.css">
+</head>
 
-      <form action="#form_single" method="GET" id="form_single">
-        <header>
-          <h2>Single choice from a set of options</h2>
-        </header>
-        <fieldset>
-          <legend>Small list of values</legend>
-          <!--
+<body>
+  <header>
+    <h1>
+      Choosing the correct field
+    </h1>
+    <p>Please create the right HTML form field(s) for each <code>fieldset</code> below</p>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#form_text">Text entry</a></li>
+      <li><a href="#form_booleans">Boolean choices</a></li>
+      <li><a href="#form_single">Single choice</a></li>
+      <li><a href="#form_multiple">Multiple choices</a></li>
+      <li><a href="#form_other">Other form fields</a></li>
+    </ul>
+  </nav>
+  <main>
+    <form action="#form_text" method="GET" id="form_text">
+      <header>
+        <h2>Text entry</h2>
+      </header>
+      <fieldset>
+        <legend>Simple text: Nickname</legend>
+        <!-- The server is expecting plain text here with the `name` of `nickname`. Linebreaks aren't allowed. -->
+        <input type="text" id="Nickname" name="nickname" required>
+      </fieldset>
+      <fieldset>
+        <legend>Multi-line Text: Biography</legend>
+        <!-- The server is expecting paragraphs of text here to act as the `biography` field. Linebreaks need to be saved. -->
+        <p><textarea rows="1" cols="35" name="biography" required></textarea></p>
+      </fieldset>
+      <fieldset>
+        <legend>Mobile phone number</legend>
+        <!-- The server is expecting the user's `mobile_phone` here. -->
+        <input type="tel" id="phone" name="phone">
+      </fieldset>
+      <fieldset>
+        <legend>Website</legend>
+        <!-- The server is expecting the user's `website` address here. -->
+        <input type="url" name="url" id="url">
+      </fieldset>
+      <fieldset>
+        <legend>Date of birth</legend>
+        <!-- The server is expecting the user's `date_of_birth` here. -->
+        <input type="date" id="date_of_birth" name="date_of_birth">
+      </fieldset>
+      <fieldset>
+        <legend>Age</legend>
+        <!-- The server is expecting the user's `age` in years here. -->
+
+      </fieldset>
+      <div>
+        <button type="submit" name="form" value="text">Send</button>
+      </div>
+    </form>
+
+    <form action="#form_booleans" method="GET" id="form_booleans">
+      <header>
+        <h2>Boolean / Binary choices</h2>
+      </header>
+      <fieldset>
+        <legend>True / False, with a default choice</legend>
+        <!-- The server is expecting a choice between `true` and `false` only. Set it to `true` by default. -->
+        <ul>
+          <li>
+            <label>
+              <input type="radio" name="choice" value="true" required>True
+            </label>
+          </li>
+          <li>
+            <label>
+              <input type="radio" name="choice" value="false" required>False
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset>
+        <legend>Confirm</legend>
+        <!-- The server is expecting a specific name/value pair of `confirm=true` that the user can confirm, or nothing in its place.
+           -->
+        <label>
+          <input type="checkbox" name="confirm" value="true">Confirm
+        </label>
+      </fieldset>
+      <fieldset>
+        <legend>Yes or No</legend>
+        <!-- The server is expecting a value of `yes`, or `no` for the `agree` field. -->
+        <ul>
+          <li>
+            <label><input type="radio" name="agree" value="yes" required>Yes</label>
+          </li>
+          <li>
+            <label><input type="radio" name="agree" value="no" required>No</label>
+          </li>
+        </ul>
+      </fieldset>
+      <div>
+        <button type="submit" name="form" value="booleans">Send</button>
+      </div>
+    </form>
+
+    <form action="#form_single" method="GET" id="form_single">
+      <header>
+        <h2>Single choice from a set of options</h2>
+      </header>
+      <fieldset>
+        <legend>Small list of values</legend>
+        <!--
             The server is expecting one of the following values for `fruit`:
 
               - `apples`: Apples
               - `bananas`: Bananas
               - `grapes`: Grapes
               - `plums`: Plums
-          -->
-        </fieldset>
-        <fieldset>
-          <legend>Large list of values</legend>
-          <!--
+          --><select name="fruit" id="fruit">
+          <option value="apples">Apples</option>
+          <option value="bananas">Banana </option>
+          <option value="grapes">Grapes</option>
+          <option value="plums">plums</option>
+        </select>
+      </fieldset>
+      <fieldset>
+        <legend>Large list of values</legend>
+        <!--
             The server is expecting one of the following values for `birds`:
 
               - `duck`: Ducks
@@ -109,19 +145,30 @@
               - `robin`: Robins
               - `swallow`: Swallows
           -->
-        </fieldset>
-        <div>
-          <button type="submit" name="form" value="single">Send</button>
-        </div>
-      </form>
+        <select name="birds" id="birds">
+          <option value="duck">Ducks</option>
+          <option value="eagle">Eagles</option>
+          <option value="heron">Herons</option>
+          <option value="gull">Gulls</option>
+          <option value="pigeon">Pigeons</option>
+          <option value="raven">Ravens</option>
+          <option value="robin">Robins</option>
+          <option value="swallow">Swallows</option>
 
-      <form action="#form_multiple" method="GET" id="form_multiple">
-        <header>
-          <h2>Multiple choices from a set of options</h2>
-        </header>
-        <fieldset>
-          <legend>Small list of values</legend>
-          <!--
+        </select>
+      </fieldset>
+      <div>
+        <button type="submit" name="form" value="single">Send</button>
+      </div>
+    </form>
+
+    <form action="#form_multiple" method="GET" id="form_multiple">
+      <header>
+        <h2>Multiple choices from a set of options</h2>
+      </header>
+      <fieldset>
+        <legend>Small list of values</legend>
+        <!--
             The server is expecting one or more of the following values for `fruit`:
 
               - `apples`: Apples
@@ -129,10 +176,16 @@
               - `grapes`: Grapes
               - `plums`: Plums
           -->
-        </fieldset>
-        <fieldset>
-          <legend>Large list of values</legend>
-          <!--
+        <select multiple>
+          <option value="apples">Apples
+          <option value="bananas">Bananas
+          <option value="grapes">Grapes
+          <option value="plums">Plums
+        </select>
+      </fieldset>
+      <fieldset>
+        <legend>Large list of values</legend>
+        <!--
             The server is expecting one or more of the following values for `birds`:
 
               - `duck`: Ducks
@@ -144,44 +197,56 @@
               - `robin`: Robins
               - `swallow`: Swallows
           -->
-        </fieldset>
-        <div>
-          <button type="submit" name="form" value="multiple">Send</button>
-        </div>
-      </form>
+        <select multiple>
+          <option value="duck">Dacks
+          <option value="eagle">Eagles
+          <option value="heron">Herons
+          <option value="gull">Gulls
+          <option value="pigeon">Pigeons
+          <option value="raven">Raven
+          <option value="robin">Robins
+          <option value="swallow" name="swallow">Swallows
+        </select>
+      </fieldset>
+      <div>
+        <button type="submit" name="form" value="multiple">Send</button>
+      </div>
+    </form>
 
-      <form action="#form_other" method="GET" id="form_other" enctype="multipart/form-data">
-        <header>
-          <h2>Other form fields</h2>
-        </header>
-        <fieldset>
-          <legend>Hidden</legend>
-          <!--
+    <form action="#form_other" method="GET" id="form_other" enctype="multipart/form-data">
+      <header>
+        <h2>Other form fields</h2>
+      </header>
+      <fieldset>
+        <legend>Hidden</legend>
+        <!--
             The server is expecting a hidden `signed=true` pair here.
-          -->
-        </fieldset>
-        <fieldset>
-          <legend>File(s)</legend>
-          <!--
+          --><input type="hidden" name="signed" value="true">
+      </fieldset>
+      <fieldset>
+        <legend>File(s)</legend>
+        <!--
             The server is expecting at least one file here, with the name of `photos`.
-          -->
-        </fieldset>
-        <fieldset>
-          <legend>Range</legend>
-          <!--
+          --><input type="file" name="photos">
+      </fieldset>
+      <fieldset>
+        <legend>Range</legend>
+        <!--
             The server is expecting at a numerical value for `bearing` between 0 and 359
-          -->
-        </fieldset>
-        <fieldset>
-          <legend>Colour</legend>
-          <!--
+          --><input type="range" name="bearing" min="0" max="359" step="30">
+      </fieldset>
+      <fieldset>
+        <legend>Colour</legend>
+        <!--
             The server is expecting at a colour value for `background_colour`
           -->
-        </fieldset>
-        <div>
-          <button type="submit" name="form" value="other">Send</button>
-        </div>
-      </form>
-    </main>
-  </body>
+        <input type="color" name="background_colour">
+      </fieldset>
+      <div>
+        <button type="submit" name="form" value="other">Send</button>
+      </div>
+    </form>
+  </main>
+</body>
+
 </html>
