Added modified files

--- a/05-all-elements/05-all-elements.html
+++ b/05-all-elements/05-all-elements.html
@@ -27,9 +27,7 @@
       </dd>
 
       <!-- This <abbr> entry is missing some text -->
-      <dt>
-        <code>&lt;abbr&gt;</code>
-      </dt>
+    <dt>
       <dd>
         <p>
           The abbreviation element (<code>&lt;abbr&gt;</code>) is one of the fundamental elements in HTML.
@@ -37,13 +35,10 @@
         <p>
           It allows a user to use an abbreviation(s) or acronym(s) in a text.
         </p>
-
       </dd>
-
+    </dt>
       <!-- Add the next element here as a <dt> & <dd> pair -->
-      <dt>
-        <code>&lt;&gt;article</code>
-      </dt>
+    <dt>
       <dd>
         <p>
           The article element (<code>&lt;article&gt;</code>) is one of the fundamental elements in HTML.
@@ -54,22 +49,22 @@
           comment.
         </p>
       </dd>
-    <!-- Add the next element here as a <dt> & <dd> pair -->
-      <dt>
-        <code>&lt;&gt;b</code>
-      </dt>
+    </dt>
+      <!-- Add the next element here as a <dt> & <dd> pair -->
+    <dt>
       <dd>
-      <p>
-        The b element (<code>&lt;b&gt;</code>) is one of the fundamental elements in the HTML.
-      </p>
-      <p>
-        It allows a user to represent a span of text to be stylistically offset from the normal prose without conveying any extra importance.
-        Examples are key words in a document abstract, product names in a review, or other spans of text whose typical typographic presentation is bold.
-      </p>
-    </dd>
-      <dt>
-        <code>&lt;body&gt;</code>
-      </dt>
+        <p>
+          The b element (<code>&lt;b&gt;</code>) is one of the fundamental elements in the HTML.
+        </p>
+        <p>
+          It allows a user to represent a span of text to be stylistically offset from the normal prose without
+          conveying any extra importance.
+          Examples are key words in a document abstract, product names in a review, or other spans of text whose typical
+          typographic presentation is bold.
+        </p>
+      </dd>
+    </dt>
+    <dt>
       <dd>
         <p>
           The body element (<code>&lt;body&gt;</code>) is one of the fundamental elements in HTML.
@@ -78,9 +73,8 @@
           It allows a user to represent the main content of the document.
         </p>
       </dd>
-      <dt>
-        <code>&lt;button&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The button element (<code>&lt;button&gt;</code>) is one of the fundamental elements in HTML.
@@ -90,9 +84,8 @@
           should allow the user to activate the button.
         </p>
       </dd>
-      <dt>
-        <code>&lt;caption&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The caption element (<code>&lt;caption&gt;</code>) is one of the fundamental elements in HTML.
@@ -102,9 +95,8 @@
           thah is a table element.
         </p>
       </dd>
-      <dt>
-        <code>&lt;code&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The code element (<code>&lt;code&gt;</code>) is one of the fundamental elements in HTML.
@@ -114,9 +106,8 @@
           a filename and even a computer program.
         </p>
       </dd>
-      <dt>
-        <code>&lt;dd&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The description, definition element (<code>&lt;dd&gt;</code>) is one of the fundamental elements in HTML.
@@ -125,9 +116,8 @@
           It stands for description, definition, or value, part of a term description group in a description list.
         </p>
       </dd>
-      <dt>
-        <code>&lt;del&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The del element (<code>&lt;del&gt;</code>) is one of the fundamental elements in HTML.
@@ -137,21 +127,20 @@
           Thedel elements should not cross implied paragraph boundaries.
         </p>
       </dd>
-      <dt>
-        <code>&lt;dfn&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The dfn element (<code>&lt;dfn&gt;</code>) is one of the fundamental elements in HTML.
         </p>
         <p>
           The dfn element represents the defining instance of a term. The paragraph, description list group,
-           or section that is the nearest ancestor of the dfn element must also contain the definition(s) for the term given by the dfn element.
+          or section that is the nearest ancestor of the dfn element must also contain the definition(s) for the term
+          given by the dfn element.
         </p>
       </dd>
-      <dt>
-        <code>&lt;div&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The division element (<code>&lt;div&gt;</code>) is one of the fundamental elements in HTML.
@@ -161,7 +150,8 @@
           children and it can be used with the class and lang.
         </p>
       </dd>
-    <dt>
+    </dt>
+      <dt>
         <code>&lt;DOCTYPE&gt;</code>
       </dt>
       <dd>
@@ -173,21 +163,19 @@
           A string that is an ASCII case-insensitive match for the string
         </p>
       </dd>
-      <dt>
-        <code>&lt;dt&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The dt element (<code>&lt;dt&gt;</code>) is one of the fundamental elements in HTML.
         </p>
         <p>
           It represents the term,
-           or name, part of a term-description group in a description list (dl element).
+          or name, part of a term-description group in a description list (dl element).
         </p>
       </dd>
-      <dt>
-        <code>&lt;em&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The em element (<code>&lt;em&gt;</code>) is one of the fundamental elements in HTML.
@@ -196,12 +184,11 @@
           It represents stress emphasis of its contents.
           The level of emphasis that a particular piece of content has is given by its number of ancestor em elements.
           The 'stress' being referred to is linguistic.
-          If spoken, this stress would be emphasised pronunciation on a word that can change the nuance of a sentence.          .
+          If spoken, this stress would be emphasised pronunciation on a word that can change the nuance of a sentence. .
         </p>
       </dd>
-      <dt>
-        <code>&lt;footer&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The footer element (<code>&lt;footer&gt;</code>) is one of the fundamental elements in HTML.
@@ -212,9 +199,8 @@
           Contact information for the section given in a footer should be marked up using the address element.
         </p>
       </dd>
-      <dt>
-        <code>&lt;form&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The form element (<code>&lt;form&gt;</code>) is one of the fundamental elements in HTML.
@@ -224,9 +210,8 @@
           some of which can represent editable values that can be submitted to a server for processing.
         </p>
       </dd>
-      <dt>
-        <code>&lt;h1-h6&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The h1-h6 element (<code>&lt;h1-h6&gt;</code>) is one of the fundamental elements in HTML.
@@ -236,9 +221,8 @@
           some of which can represent editable values that can be submitted to a server for processing.
         </p>
       </dd>
-      <dt>
-        <code>&lt;head&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The head element (<code>&lt;head&gt;</code>) is one of the fundamental elements in HTML.
@@ -247,9 +231,8 @@
           It represents a collection of metadata for the Document.
         </p>
       </dd>
-      <dt>
-        <code>&lt;header&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The header element (<code>&lt;header&gt;</code>) is one of the fundamental elements in HTML.
@@ -260,9 +243,8 @@
           version history information or publication date..
         </p>
       </dd>
-      <dt>
-        <code>&lt;html&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The html element (<code>&lt;html&gt;</code>) is one of the fundamental elements in HTML.
@@ -271,22 +253,21 @@
           The html element represents the root of an HTML document.
         </p>
       </dd>
-      <dt>
-        <code>&lt;i&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The i element (<code>&lt;i&gt;</code>) is one of the fundamental elements in HTML.
         </p>
         <p>
-          It represents  a span of text in an alternate voice or mood,
-           or otherwise offset from the normal prose, such as a taxonomic designation, a technical term,
-            an idiomatic phrase from another language, a thought, a ship name, or some other prose whose typical typographic presentation is italicized.
+          It represents a span of text in an alternate voice or mood,
+          or otherwise offset from the normal prose, such as a taxonomic designation, a technical term,
+          an idiomatic phrase from another language, a thought, a ship name, or some other prose whose typical
+          typographic presentation is italicized.
         </p>
       </dd>
-      <dt>
-        <code>&lt;iframe&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The iframe element (<code>&lt;iframe&gt;</code>) is one of the fundamental elements in HTML.
@@ -303,9 +284,8 @@
           Any number of comments and space characters.
         </p>
       </dd>
-      <dt>
-        <code>&lt;img&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The img element (<code>&lt;img&gt;</code>) is one of the fundamental elements in HTML.
@@ -318,9 +298,8 @@
           image resource that is neither paged nor scripted.
         </p>
       </dd>
-      <dt>
-        <code>&lt;ins&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The ins element (<code>&lt;ins&gt;</code>) is one of the fundamental elements in HTML.
@@ -330,9 +309,8 @@
           The ins elements should not cross implied paragraph boundaries.
         </p>
       </dd>
-      <dt>
-        <code>&lt;li&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The list element (<code>&lt;li&gt;</code>) is one of the fundamental elements in HTML.
@@ -341,9 +319,8 @@
           It allows a user to make a list on a document.
         </p>
       </dd>
-      <dt>
-        <code>&lt;link&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The link element (<code>&lt;link&gt;</code>) is one of the fundamental elements in HTML.
@@ -355,9 +332,8 @@
           which must be present and must contain a valid non-empty URL potentially surrounded by spaces.
         </p>
       </dd>
-      <dt>
-        <code>&lt;main&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The main element (<code>&lt;main&gt;</code>) is one of the fundamental elements in HTML.
@@ -371,9 +347,8 @@
           It should therefore be used once per page.
         </p>
       </dd>
-      <dt>
-        <code>&lt;meta&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The meta element (<code>&lt;meta&gt;</code>) is one of the fundamental elements in HTML.
@@ -387,9 +362,8 @@
           (e.g. for transmission over the network or for disk storage) with the charset attribute.
         </p>
       </dd>
-      <dt>
-        <code>&lt;nav&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The nav element (<code>&lt;nav&gt;</code>) is one of the fundamental elements in HTML.
@@ -402,9 +376,8 @@
           but the footer element is more appropriate in such cases.
         </p>
       </dd>
-      <dt>
-        <code>&lt;ol&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The ordered list element (<code>&lt;ol&gt;</code>) is one of the fundamental elements in HTML.
@@ -414,9 +387,8 @@
           such that changing the order would change the meaning of the list.
         </p>
       </dd>
-      <dt>
-        <code>&lt;option&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The option element (<code>&lt;option&gt;</code>) is one of the fundamental elements in HTML.
@@ -429,9 +401,8 @@
           but instead represents a label for the select control.
         </p>
       </dd>
-      <dt>
-        <code>&lt;p&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The paragraph element (<code>&lt;p&gt;</code>) is one of the fundamental elements in HTML.
@@ -440,9 +411,8 @@
           It allows a user to write a paragraph..
         </p>
       </dd>
-      <dt>
-        <code>&lt;script&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The script element (<code>&lt;script&gt;</code>) is one of the fundamental elements in HTML.
@@ -452,9 +422,8 @@
           The element does not represent content for the user..
         </p>
       </dd>
-      <dt>
-        <code>&lt;section&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The section element (<code>&lt;section&gt;</code>) is one of the fundamental elements in HTML.
@@ -467,9 +436,8 @@
           A web site's home page could be split into sections for an introduction, news items, contact information.
         </p>
       </dd>
-      <dt>
-        <code>&lt;select&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The select element (<code>&lt;select&gt;</code>) is one of the fundamental elements in HTML.
@@ -478,9 +446,8 @@
           The select element represents a control for selecting amongst a set of options.
         </p>
       </dd>
-      <dt>
-        <code>&lt;small&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The small element (<code>&lt;small&gt;</code>) is one of the fundamental elements in HTML.
@@ -491,9 +458,8 @@
           lists, or sections of text. It is only intended for short runs of text.
         </p>
       </dd>
-      <dt>
-        <code>&lt;source&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The source element (<code>&lt;source&gt;</code>) is one of the fundamental elements in HTML.
@@ -504,9 +470,8 @@
           The value must be a valid non-empty URL potentially surrounded by spaces. This attribute must be present.
         </p>
       </dd>
-      <dt>
-        <code>&lt;span&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The span element (<code>&lt;span&gt;</code>) is one of the fundamental elements in HTML.
@@ -516,9 +481,8 @@
           e.g. class, lang, or dir. It represents its children.
         </p>
       </dd>
-      <dt>
-        <code>&lt;style&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The style element (<code>&lt;style&gt;</code>) is one of the fundamental elements in HTML.
@@ -529,9 +493,8 @@
           The element does not represent content for the user.
         </p>
       </dd>
-      <dt>
-        <code>&lt;sammary&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The sammary element (<code>&lt;sammary&gt;</code>) is one of the fundamental elements in HTML.
@@ -541,9 +504,8 @@
           or legend for the rest of the contents of the summary element's parent details element, if any.
         </p>
       </dd>
-      <dt>
-        <code>&lt;table&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The table element (<code>&lt;table&gt;</code>) is one of the fundamental elements in HTML.
@@ -553,9 +515,8 @@
           Tables must not be used as layout aids.
         </p>
       </dd>
-      <dt>
-        <code>&lt;tbody&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The tbody element (<code>&lt;tbody&gt;</code>) is one of the fundamental elements in HTML.
@@ -565,9 +526,8 @@
           if the tbody element has a parent and it is a table.
         </p>
       </dd>
-      <dt>
-        <code>&lt;td&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The td element (<code>&lt;td&gt;</code>) is one of the fundamental elements in HTML.
@@ -576,9 +536,8 @@
           The td element represents a data cell in a table.
         </p>
       </dd>
-      <dt>
-        <code>&lt;tfoot&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The tfoot element (<code>&lt;tfoot&gt;</code>) is one of the fundamental elements in HTML.
@@ -588,9 +547,8 @@
           if the tfoot element has a parent and it is a table.
         </p>
       </dd>
-      <dt>
-        <code>&lt;th&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The th element (<code>&lt;th&gt;</code>) is one of the fundamental elements in HTML.
@@ -599,9 +557,8 @@
           The th element represents a header cell in a table.
         </p>
       </dd>
-      <dt>
-        <code>&lt;thead&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The thead element (<code>&lt;thead&gt;</code>) is one of the fundamental elements in HTML.
@@ -611,9 +568,8 @@
           if the thead element has a parent and it is a table.
         </p>
       </dd>
-      <dt>
-        <code>&lt;title&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The title element (<code>&lt;title&gt;</code>) is one of the fundamental elements in HTML.
@@ -626,9 +582,8 @@
           since the first heading does not have to stand alone when taken out of context.
         </p>
       </dd>
-      <dt>
-        <code>&lt;tr&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The tr element (<code>&lt;tr&gt;</code>) is one of the fundamental elements in HTML.
@@ -637,9 +592,8 @@
           The tr element represents a row of cells in a table.
         </p>
       </dd>
-      <dt>
-        <code>&lt;ul&gt;</code>
-      </dt>
+    </dt>
+    <dt>
       <dd>
         <p>
           The ul element (<code>&lt;ul&gt;</code>) is one of the fundamental elements in HTML.
@@ -649,6 +603,7 @@
           where changing the order would not materially change the meaning of the list.
         </p>
       </dd>
+    </dt>
     </dl>
   </main>
 </body>
