--- a/13-semantics/13-semantics.html
+++ b/13-semantics/13-semantics.html
@@ -181,7 +181,17 @@
           6. Create the HTML necessary for the image `markup.png` in this folder.
           It is a definition of the word 'Markup'.
         -->
-        <img src="markup.png" alt="There are three definitions for the word 'Markup'">
+        <h2>markup</h2>
+          /ˈmɑːkʌp/
+          <b><i>noun</i></b><br>
+          <pre>noun: <b>markup</b>; plural noun: <b>markups</b>; noun: <b>mark-up</b>; plural noun: <b>mark-ups</b>
+          <b>1. the amount added to the cost price of goods to cover overheads and profit.</b>
+             "a markup of 50 per cent"
+          <b>2. the process or result of correcting text in preparation for printing.</b>
+          <b>3. <kbd>COMPUTING</kbd>
+              a set of tags assigned to elements of a text to indicate their relation to the rest of the text or dictate how they should be displayed.</b>
+              "markup languages"
+          </pre>
       </section>
 
     </main>
