--- a/13-semantics/13-semantics.html
+++ b/13-semantics/13-semantics.html
@@ -96,8 +96,8 @@
             - Weight
             - Height
            -->
-           <table>
-          <caption><b>Students details</b></caption>
+          <table>
+            <caption><b>Students details</b></caption>
           <thead>
             <tr>
               <th scope="col" id="header_name">Name</th>
@@ -124,7 +124,7 @@
               <td headers="row_judith header_weight">51kg</td>
               <td headers="row_judith header_height">168cm</td>
             </tr>
-           </table>
+          </table>
            <!---
           Then we need rows for each student, their details are as follows:
 
@@ -172,7 +172,7 @@
               Develop your critical thinking skills. Boost your ability to solve problems and make the right decisions at work, home and in study.
         -->
         <h3>Critical Thinking|SkillsYouNeed</h3>
-          <p><a href="file:///C:/Users/Jerome/Code/html/html-exercises/13-semantics/search-resalt.html">A link to the search result page</a></p>
+          <p><a href="file:///C:/Users/Jerome/Code/html/html-exercises/13-semantics/search-resalts.html">Go to the search result page</a></p>
       </section>
       <section>
         <h2>A definition</h2>
